add BGCMS client, BGResourcePlugin, jsTimer jsModule. 增加BGCMS客戶端，BGResourcePlugin, jsTimer js模塊

--- a/diy/BGMRPC/client/BGCMS/bgcms.qrc
+++ b/diy/BGMRPC/client/BGCMS/bgcms.qrc
@@ -21,5 +21,7 @@
         <file>markdown/markdown.css</file>
         <file>markdown/marked.min.js</file>
         <file>markdown/qwebchannel.js</file>
+        <file>icons/icons8-Login-48.png</file>
+        <file>icons/icons8-Settings-48.png</file>
     </qresource>
 </RCC>
