--- a/diy/BGMRPC/client/BGCMS/contentdialog.ui
+++ b/diy/BGMRPC/client/BGCMS/contentdialog.ui
@@ -32,7 +32,7 @@
    <item>
     <widget class="QStackedWidget" name="stwContent">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="page">
       <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -209,6 +209,20 @@
             </property>
             <property name="insertPolicy">
              <enum>QComboBox::NoInsert</enum>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QToolButton" name="pbResBrowser">
+            <property name="text">
+             <string>...</string>
+            </property>
+            <property name="icon">
+             <iconset resource="bgcms.qrc">
+              <normaloff>:/icons/icons8-Picture-48.png</normaloff>:/icons/icons8-Picture-48.png</iconset>
+            </property>
+            <property name="autoRaise">
+             <bool>true</bool>
             </property>
            </widget>
           </item>
